--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/JF2_Icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>James-Brown | Portfolio</title>
+    <title>James-Frown | Portfolio</title>
 </head>
 
 <body>
